@@ -1,3 +1,8 @@
+Sun Oct  6 13:20:04 EEST 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Don't swtich to become primary router if we are backup if
+	  decryption error has occurred.  Affected file silcd/server.c.
+
 Thu Sep 26 13:51:02 CEST 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* If packet processing fails (like integrity check fails)
